# Dent_QR_Gen_Sejong_CJ

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: scheduled_build.yml
data/: clinics.xlsx  id_map.csv
data/clinic_extra/: SAMPLE_ID.json  SJ26-0002.json
docs/: 404.html  index.html
docs/c/SJ26-0001/: index.html
docs/c/SJ26-0002/: index.html
docs/outbox/: index.html  sendlist.csv
output/: changes.csv  mapping.csv
output/delivery/SJ26-0001_sejonggangnamcigwa/: info.txt
scripts/: make_sample_excel.py
src/sejong_dental_qr/: __init__.py  __main__.py  cli.py  config.py  delivery.py  id_map.py  init.py  io_excel.py  main.py  normalize.py  outbox.py  planner.py  qrgen.py  renderer.py  report.py  utils.py
src/sejong_dental_qr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
