[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sejong_dental_qr"
version = "0.1.0"
description = "Generate QR assets and static pages for Sejong dental clinics."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "qrcode[pil]>=7.4",
  "python-slugify>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
